--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "info": {
     "title": "About Electricity Maps",
-    "text": "Electricity Maps is an API platform providing real-time and predictive electricity signals allowing any device to reduce their cost and emissions by informing them about the best time to consume electricity.",
+    "text": "is an API platform providing real-time and predictive electricity signals allowing any device to reduce their cost and emissions by informing them about the best time to consume electricity.",
     "version": "App version: {{version}}",
     "share-app": "Share the app:"
   },
@@ -10,7 +10,7 @@
   },
   "ranking-panel": {
     "title": "Electricity Grid Carbon Emissions",
-    "subtitle": "See where your electricity comes from and how much CO2 was emitted to produce it",
+    "subtitle": "See where your electricity comes from<br/> and how much CO2 was emitted to produce it",
     "search": "Search areas (ranked by carbon intensity)",
     "no-results": "No results found for this search 🌍"
   },
