fix(translation): Add 72h translations

--- a/web/src/locales/da.json
+++ b/web/src/locales/da.json
@@ -216,12 +216,14 @@
   "time-controller": {
     "title": {
       "24h": "Timevis data for:",
+      "72h": "Timevis data for:",
       "30d": "Daglig data for:",
       "12mo": "Månedlig data for:",
       "all": "Årlig data for:"
     },
     "30d": "daglig",
     "24h": "timevis",
+    "72h": "timevis",
     "12mo": "månedlig",
     "all": "årlig"
   },
@@ -245,48 +247,56 @@
   "country-history": {
     "carbonintensity": {
       "24h": "Timevis CO₂-intensitet",
+      "72h": "Timevis CO₂-intensitet",
       "30d": "Daglig CO₂-intensitet",
       "12mo": "Månedlig CO₂-intensitet",
       "all": "Årlig CO₂-intensitet"
     },
     "emissions": {
       "24h": "Timevis CO₂-udledninger",
+      "72h": "Timevis CO₂-udledninger",
       "30d": "Daglig CO₂-udledninger",
       "12mo": "Månedlig CO₂-udledninger",
       "all": "Årlig CO₂-udledninger"
     },
     "emissionsorigin": {
       "24h": "Timevis CO₂-udlednings oprindelse",
+      "72h": "Timevis CO₂-udlednings oprindelse",
       "30d": "Daglig CO₂-udlednings oprindelse",
       "12mo": "Månedlig CO₂-udlednings oprindelse",
       "all": "Årlig CO₂-udlednings oprindelse"
     },
     "emissionsproduction": {
       "24h": "Timevis elproduktions udledning",
+      "72h": "Timevis elproduktions udledning",
       "30d": "Daglig elproduktions udledning",
       "12mo": "Månedlig elproduktions udledning",
       "all": "Årlig elproduktions udledning"
     },
     "electricityorigin": {
       "24h": "Timevis elektricitets oprindelse",
+      "72h": "Timevis elektricitets oprindelse",
       "30d": "Daglig elektricitets oprindelse",
       "12mo": "Månedlig elektricitets oprindelse",
       "all": "Årlig elektricitets oprindelse"
     },
     "electricityproduction": {
       "24h": "Timevis elektricitets produktion",
+      "72h": "Timevis elektricitets produktion",
       "30d": "Daglig elektricitets produktion",
       "12mo": "Månedlig elektricitets produktion",
       "all": "Årlig elektricitets produktion"
     },
     "electricityprices": {
       "24h": "Timevise elektricitets priser",
+      "72h": "Timevise elektricitets priser",
       "30d": "Daglige elektricitets priser",
       "12mo": "Månedlige elektricitets priser",
       "all": "Årlige elektricitets priser"
     },
     "netExchange": {
       "24h": "Timevis nettoudveksling",
+      "72h": "Timevis nettoudveksling",
       "30d": "Daglig nettoudveksling",
       "12mo": "Månedlig nettoudveksling",
       "all": "Årlig nettoudveksling"
