--- a/web/src/locales/zh-TW.json
+++ b/web/src/locales/zh-TW.json
@@ -139,6 +139,7 @@
   "time-controller": {
     "30d": "每日",
     "24h": "每小時",
+    "72h": "每小時",
     "12mo": "每月",
     "all": "每年"
   },
@@ -150,48 +151,56 @@
   "country-history": {
     "carbonintensity": {
       "24h": "每小時碳強度",
+      "72h": "每小時碳強度",
       "30d": "每日碳強度",
       "12mo": "每月碳強度",
       "all": "每年碳強度"
     },
     "emissions": {
       "24h": "每小時碳排放",
+      "72h": "每小時碳排放",
       "30d": "每日碳排放",
       "12mo": "每月碳排放",
       "all": "每年碳排放"
     },
     "emissionsorigin": {
       "24h": "每小時碳排放來源",
+      "72h": "每小時碳排放來源",
       "30d": "每日碳排放來源",
       "12mo": "每月碳排放來源",
       "all": "每年碳排放來源"
     },
     "emissionsproduction": {
       "24h": "每小時生產排放",
+      "72h": "每小時生產排放",
       "30d": "每日生產排放",
       "12mo": "每月生產排放",
       "all": "每年生產排放"
     },
     "electricityorigin": {
       "24h": "每小時電力來源",
+      "72h": "每小時電力來源",
       "30d": "每日電力來源",
       "12mo": "每月電力來源",
       "all": "每年電力來源"
     },
     "electricityproduction": {
       "24h": "每小時電力生產",
+      "72h": "每小時電力生產",
       "30d": "每日電力生產",
       "12mo": "每月電力生產",
       "all": "每年電力生產"
     },
     "electricityprices": {
       "24h": "每小時電價",
+      "72h": "每小時電價",
       "30d": "每日電價",
       "12mo": "每月電價",
       "all": "每年電價"
     },
     "netExchange": {
       "24h": "每小時淨交換",
+      "72h": "每小時淨交換",
       "30d": "每日淨交換",
       "12mo": "每月淨交換",
       "all": "每年淨交換"
