fix(translation): Remove hardcoded string in favor of translation strings

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -99,6 +99,7 @@
     "emission": "Emission factor data"
   },
   "country-panel": {
+    "forecastCta": "Looking for forecast data?",
     "source": "Source",
     "carbonintensity": "Carbon Intensity",
     "lowcarbon": "Low-carbon",
