fix(locales): Fix typo in sv.json

--- a/web/src/locales/sv.json
+++ b/web/src/locales/sv.json
@@ -92,7 +92,7 @@
       "electricity-consumption": "Elkonsumtion",
       "total-emissions": "Totala koldioxidutsläpp",
       "total-electricity-production": "Total elproduktion",
-      "total-electricity-consumption": "Total ekonsumtion"
+      "total-electricity-consumption": "Total elkonsumtion"
     },
     "electricityconsumption": "Elektricitet",
     "emissions": "Utsläpp",
