--- a/web/src/locales/sv.json
+++ b/web/src/locales/sv.json
@@ -192,17 +192,15 @@
   },
   "time-controller": {
     "title": {
-      "24h": "Timvis data för:",
       "72h": "Timvis data för:",
-      "30d": "Dagsvis data för:",
-      "12mo": "Månadsvis data för:",
-      "all": "Årsvis data för:"
+      "3mo": "Dagsvis data för:",
+      "all_months": "Månadsvis data för:",
+      "all_years": "Årsvis data för:"
     },
-    "30d": "dagvis",
-    "24h": "timvis",
+    "3mo": "dagvis",
     "72h": "timvis",
-    "12mo": "månadsvis",
-    "all": "årsvis"
+    "all_months": "månadsvis",
+    "all_years": "årsvis"
   },
   "ranking-panel": {
     "title": "Klimatpåverkan per region",
@@ -226,60 +224,59 @@
   },
   "country-history": {
     "carbonintensity": {
-      "24h": "Timvis koldioxidintensitet",
       "72h": "Timvis koldioxidintensitet",
-      "30d": "Daglig koldioxidintensitet",
-      "12mo": "Månadsvis koldioxidintensitet",
-      "all": "Årlig koldioxidintensitet"
+      "3mo": "Daglig koldioxidintensitet",
+      "all_months": "Månadsvis koldioxidintensitet",
+      "all_years": "Årlig koldioxidintensitet"
     },
     "emissions": {
       "24h": "Timvisa koldioxidutsläpp",
       "72h": "Timvisa koldioxidutsläpp",
-      "30d": "Dagliga koldioxidutsläpp",
-      "12mo": "Månadsvisa koldioxidutsläpp",
-      "all": "Årliga koldioxidutsläpp"
+      "3mo": "Dagliga koldioxidutsläpp",
+      "all_months": "Månadsvisa koldioxidutsläpp",
+      "all_years": "Årliga koldioxidutsläpp"
     },
     "emissionsorigin": {
       "24h": "Timvis ursprung av koldioxidutsläpp",
       "72h": "Timvis ursprung av koldioxidutsläpp",
-      "30d": "Dagligt ursprung av koldioxidutsläpp",
-      "12mo": "Månadsvis ursprung av koldioxidutsläpp",
-      "all": "Årligt ursprung av koldioxidutsläpp"
+      "3mo": "Dagligt ursprung av koldioxidutsläpp",
+      "all_months": "Månadsvis ursprung av koldioxidutsläpp",
+      "all_years": "Årligt ursprung av koldioxidutsläpp"
     },
     "emissionsproduction": {
       "24h": "Timvisa produktionsutsläpp",
       "72h": "Timvisa produktionsutsläpp",
-      "30d": "Dagliga produktionsutsläpp",
-      "12mo": "Månadsvisa produktionsutsläpp",
-      "all": "Årliga produktionsutsläpp"
+      "3mo": "Dagliga produktionsutsläpp",
+      "all_months": "Månadsvisa produktionsutsläpp",
+      "all_years": "Årliga produktionsutsläpp"
     },
     "electricityorigin": {
       "24h": "Timvis ursprung av elektricitet",
       "72h": "Timvis ursprung av elektricitet",
-      "30d": "Dagligt ursprung av elektricitet",
-      "12mo": "Månadsvis ursprung av elektricitet",
-      "all": "Årligt ursprung av elektricitet"
+      "3mo": "Dagligt ursprung av elektricitet",
+      "all_months": "Månadsvis ursprung av elektricitet",
+      "all_years": "Årligt ursprung av elektricitet"
     },
     "electricityproduction": {
       "24h": "Timvis elproduktion",
       "72h": "Timvis elproduktion",
-      "30d": "Daglig elproduktion",
-      "12mo": "Månadsvis elproduktion",
-      "all": "Årlig elproduktion"
+      "3mo": "Daglig elproduktion",
+      "all_months": "Månadsvis elproduktion",
+      "all_years": "Årlig elproduktion"
     },
     "electricityprices": {
       "24h": "Timvisa elpriser",
       "72h": "Timvisa elpriser",
-      "30d": "Dagliga elpriser",
-      "12mo": "Månadsvisa elpriser",
-      "all": "Årliga elpriser"
+      "3mo": "Dagliga elpriser",
+      "all_months": "Månadsvisa elpriser",
+      "all_years": "Årliga elpriser"
     },
     "netExchange": {
       "24h": "Timvis nettoöverföring",
       "72h": "Timvis nettoöverföring",
-      "30d": "Daglig nettoöverföring",
-      "12mo": "Månadsvis nettoöverföring",
-      "all": "Årlig nettoöverföring"
+      "3mo": "Daglig nettoöverföring",
+      "all_months": "Månadsvis nettoöverföring",
+      "all_years": "Årlig nettoöverföring"
     },
     "not-enough-data": "Inte tillräckligt med data för att visa diagrammet"
   },
