--- a/web/src/locales/es.json
+++ b/web/src/locales/es.json
@@ -154,15 +154,13 @@
   },
   "time-controller": {
     "title": {
-      "24h": "Datos horarios para:",
-      "30d": "Datos diarios para:",
-      "12mo": "Datos mensuales para:",
-      "all": "Datos anuales para:"
+      "3mo": "Datos diarios para:",
+      "all_months": "Datos mensuales para:",
+      "all_years": "Datos anuales para:"
     },
-    "30d": "diario",
-    "24h": "horario",
-    "12mo": "mensual",
-    "all": "anual"
+    "3mo": "diario",
+    "all_months": "mensual",
+    "all_years": "anual"
   },
   "footer": {
     "foundbugs": "¿Has encontrado algún error o tienes alguna sugerencia? Cuéntanoslo",
