--- a/web/src/locales/nl.json
+++ b/web/src/locales/nl.json
@@ -160,15 +160,14 @@
   },
   "time-controller": {
     "title": {
-      "30d": "Dagelijkse gegevens voor:",
-      "12mo": "Maandelijkse gegevens voor:",
-      "all": "Jaarlijkse gegevens voor:"
+      "3mo": "Dagelijkse gegevens voor:",
+      "all_months": "Maandelijkse gegevens voor:",
+      "all_years": "Jaarlijkse gegevens voor:"
     },
-    "30d": "dagelijks",
-    "24h": "per uur",
+    "3mo": "dagelijks",
     "72h": "per uur",
-    "12mo": "maandelijks",
-    "all": "jaarlijks"
+    "all_months": "maandelijks",
+    "all_years": "jaarlijks"
   },
   "left-panel": {
     "applied-methodologies": {
@@ -187,60 +186,52 @@
   },
   "country-history": {
     "carbonintensity": {
-      "24h": "Uurlijkse koolstofintensiteit",
       "72h": "Uurlijkse koolstofintensiteit",
-      "30d": "Dagelijkse koolstofintensiteit",
-      "12mo": "Maandelijkse koolstofintensiteit",
-      "all": "Jaarlijkse koolstofintensiteit"
+      "3mo": "Dagelijkse koolstofintensiteit",
+      "all_months": "Maandelijkse koolstofintensiteit",
+      "all_years": "Jaarlijkse koolstofintensiteit"
     },
     "emissions": {
-      "24h": "Uurlijkse koolstofemissies",
       "72h": "Uurlijkse koolstofemissies",
-      "30d": "Dagelijkse koolstofemissies",
-      "12mo": "Maandelijkse koolstofemissies",
-      "all": "Jaarlijkse koolstofemissies"
+      "3mo": "Dagelijkse koolstofemissies",
+      "all_months": "Maandelijkse koolstofemissies",
+      "all_years": "Jaarlijkse koolstofemissies"
     },
     "emissionsorigin": {
-      "24h": "Uurlijkse oorsprong van koolstofemissies",
       "72h": "Uurlijkse oorsprong van koolstofemissies",
-      "30d": "Dagelijkse oorsprong van koolstofemissies",
-      "12mo": "Maandelijkse oorsprong van koolstofemissies",
-      "all": "Jaarlijkse oorsprong van koolstofemissies"
+      "3mo": "Dagelijkse oorsprong van koolstofemissies",
+      "all_months": "Maandelijkse oorsprong van koolstofemissies",
+      "all_years": "Jaarlijkse oorsprong van koolstofemissies"
     },
     "emissionsproduction": {
-      "24h": "Uurlijkse productie-emissies",
       "72h": "Uurlijkse productie-emissies",
-      "30d": "Dagelijkse productie-emissies",
-      "12mo": "Maandelijkse productie-emissies",
-      "all": "Jaarlijkse productie-emissies"
+      "3mo": "Dagelijkse productie-emissies",
+      "all_months": "Maandelijkse productie-emissies",
+      "all_years": "Jaarlijkse productie-emissies"
     },
     "electricityorigin": {
-      "24h": "Uurlijkse oorsprong van elektriciteit",
       "72h": "Uurlijkse oorsprong van elektriciteit",
-      "30d": "Dagelijkse oorsprong van elektriciteit",
-      "12mo": "Maandelijkse oorsprong van elektriciteit",
-      "all": "Jaarlijkse oorsprong van elektriciteit"
+      "3mo": "Dagelijkse oorsprong van elektriciteit",
+      "all_months": "Maandelijkse oorsprong van elektriciteit",
+      "all_years": "Jaarlijkse oorsprong van elektriciteit"
     },
     "electricityproduction": {
-      "24h": "Uurlijkse elektriciteitsproductie",
       "72h": "Uurlijkse elektriciteitsproductie",
-      "30d": "Dagelijkse elektriciteitsproductie",
-      "12mo": "Maandelijkse elektriciteitsproductie",
-      "all": "Jaarlijkse elektriciteitsproductie"
+      "3mo": "Dagelijkse elektriciteitsproductie",
+      "all_months": "Maandelijkse elektriciteitsproductie",
+      "all_years": "Jaarlijkse elektriciteitsproductie"
     },
     "electricityprices": {
-      "24h": "Uurlijkse elektriciteitsprijzen",
       "72h": "Uurlijkse elektriciteitsprijzen",
-      "30d": "Dagelijkse elektriciteitsprijzen",
-      "12mo": "Maandelijkse elektriciteitsprijzen",
-      "all": "Jaarlijkse elektriciteitsprijzen"
+      "3mo": "Dagelijkse elektriciteitsprijzen",
+      "all_months": "Maandelijkse elektriciteitsprijzen",
+      "all_years": "Jaarlijkse elektriciteitsprijzen"
     },
     "netExchange": {
-      "24h": "Uurlijkse netto-uitwisseling",
       "72h": "Uurlijkse netto-uitwisseling",
-      "30d": "Dagelijkse netto-uitwisseling",
-      "12mo": "Maandelijkse netto-uitwisseling",
-      "all": "Jaarlijkse netto-uitwisseling"
+      "3mo": "Dagelijkse netto-uitwisseling",
+      "all_months": "Maandelijkse netto-uitwisseling",
+      "all_years": "Jaarlijkse netto-uitwisseling"
     },
     "not-enough-data": "Niet genoeg gegevens beschikbaar om grafiek weer te geven"
   },
