--- a/web/src/locales/pt-PT.json
+++ b/web/src/locales/pt-PT.json
@@ -164,11 +164,10 @@
     }
   },
   "time-controller": {
-    "30d": "diários",
-    "24h": "horários",
+    "3mo": "diários",
     "72h": "horários",
-    "12mo": "mensais",
-    "all": "anuais"
+    "all_months": "mensais",
+    "all_years": "anuais"
   },
   "ranking-panel": {
     "title": "Impacto climático",
@@ -192,60 +191,52 @@
   },
   "country-history": {
     "carbonintensity": {
-      "24h": "Intensidade de carbono horária",
       "72h": "Intensidade de carbono horária",
-      "30d": "Intensidade de carbono diária",
-      "12mo": "Intensidade de carbono mensal",
-      "all": "Intensidade de carbono anual"
+      "3mo": "Intensidade de carbono diária",
+      "all_months": "Intensidade de carbono mensal",
+      "all_years": "Intensidade de carbono anual"
     },
     "emissions": {
-      "24h": "Emissões de carbono horárias",
       "72h": "Emissões de carbono horárias",
-      "30d": "Emissões de carbono diárias",
-      "12mo": "Emissões de carbono mensais",
-      "all": "Emissões de carbono anuais"
+      "3mo": "Emissões de carbono diárias",
+      "all_months": "Emissões de carbono mensais",
+      "all_years": "Emissões de carbono anuais"
     },
     "emissionsorigin": {
-      "24h": "Origem horária das emissões de carbono",
       "72h": "Origem horária das emissões de carbono",
-      "30d": "Origem diária das emissões de carbono",
-      "12mo": "Origem mensal das emissões de carbono",
-      "all": "Origem anual das emissões de carbono"
+      "3mo": "Origem diária das emissões de carbono",
+      "all_months": "Origem mensal das emissões de carbono",
+      "all_years": "Origem anual das emissões de carbono"
     },
     "emissionsproduction": {
-      "24h": "Emissões horárias de produção",
       "72h": "Emissões horárias de produção",
-      "30d": "Emissões diárias de produção",
-      "12mo": "Emissões mensais de produção",
-      "all": "Emissões anuais de produção"
+      "3mo": "Emissões diárias de produção",
+      "all_months": "Emissões mensais de produção",
+      "all_years": "Emissões anuais de produção"
     },
     "electricityorigin": {
-      "24h": "Origem horária da eletricidade",
       "72h": "Origem horária da eletricidade",
-      "30d": "Origem diária da eletricidade",
-      "12mo": "Origem mensal da eletricidade",
-      "all": "Origem anual da eletricidade"
+      "3mo": "Origem diária da eletricidade",
+      "all_months": "Origem mensal da eletricidade",
+      "all_years": "Origem anual da eletricidade"
     },
     "electricityproduction": {
-      "24h": "Produção horária de eletricidade",
       "72h": "Produção horária de eletricidade",
-      "30d": "Produção diária de eletricidade",
-      "12mo": "Produção mensal de eletricidade",
-      "all": "Produção anual de eletricidade"
+      "3mo": "Produção diária de eletricidade",
+      "all_months": "Produção mensal de eletricidade",
+      "all_years": "Produção anual de eletricidade"
     },
     "electricityprices": {
-      "24h": "Preços horários da eletricidade",
       "72h": "Preços horários da eletricidade",
-      "30d": "Preços diários da eletricidade",
-      "12mo": "Preços mensais da eletricidade",
-      "all": "Preços anuais da eletricidade"
+      "3mo": "Preços diários da eletricidade",
+      "all_months": "Preços mensais da eletricidade",
+      "all_years": "Preços anuais da eletricidade"
     },
     "netExchange": {
-      "24h": "Troca líquida horária",
       "72h": "Troca líquida horária",
-      "30d": "Troca líquida diária",
-      "12mo": "Troca líquida mensal",
-      "all": "Troca líquida anual"
+      "3mo": "Troca líquida diária",
+      "all_months": "Troca líquida mensal",
+      "all_years": "Troca líquida anual"
     },
     "not-enough-data": "Dados insuficientes disponíveis para exibir o gráfico"
   },
