--- a/web/src/locales/ru.json
+++ b/web/src/locales/ru.json
@@ -16,10 +16,9 @@
     "now": "Сейчас"
   },
   "time-controller": {
-    "30d": "по дням",
-    "24h": "по часам",
-    "12mo": "по месяцам",
-    "all": "по годам"
+    "3mo": "по дням",
+    "all_months": "по месяцам",
+    "all_years": "по годам"
   },
   "ranking-panel": {
     "title": "Влияние зон на климат",
