keep single all and filter out the other

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -250,12 +250,12 @@
     },
     "72h": "72h",
     "3mo": "3mo",
-    "all_months": "All months",
+    "all_months": "All",
     "all_years": "All years",
     "historical-linking": {
       "72h": "72h",
       "3mo": "3mo",
-      "all_months": "All months",
+      "all_months": "All",
       "all_years": "All years"
     },
     "date-unavailable": {
